# PicoDVI

./: .gitmodules
examples/1bit_text/: 1bit_text.ino
html/: index.html
software/: CMakeLists.txt
software/apps/: CMakeLists.txt
software/apps/spitft2hdmi/: CMakeLists.txt  fourwire.pio  main.c
src/: PicoDVI.cpp  PicoDVI.h
